Complete classic challenge

--- a/assets/css/pvpasm.css
+++ b/assets/css/pvpasm.css
@@ -24,7 +24,7 @@ body {
 }
 
 .VueCarousel-dot-container {
-    margin-top: 0.5em !important;
+    margin-top: 40px !important;
 }
 
 .VueCarousel-dot {
